@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id("com.github.johnrengelman.shadow") version "8.1.1"
 }
 
 group = 'org.digitalsmile'
@@ -21,6 +22,10 @@ ext {
     llvm_home = '/lib/llvm-15'
     jacoco_cli = ''
     jtreg_home = ''
+}
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
 }
 
 test {
